NetBSD Problem Report #16164

Received: (qmail 14931 invoked from network); 2 Apr 2002 04:50:33 -0000
Message-Id: <20020402045031.3EADC16837@splode.eterna.com.au>
Date: Tue,  2 Apr 2002 14:50:31 +1000 (EST)
From: mrg@eterna.com.au
Reply-To: mrg@eterna.com.au
To: gnats-bugs@gnats.netbsd.org
Subject: recent vax elf snapshot kernel ptemap extent crashes
X-Send-Pr-Version: 3.95

>Number:         16164
>Category:       port-vax
>Synopsis:       recent vax elf snapshot kernel ptemap extent crashes
>Confidential:   no
>Severity:       critical
>Priority:       high
>Responsible:    ragge
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Tue Apr 02 04:51:00 +0000 2002
>Closed-Date:    Fri Apr 05 13:12:13 +0000 2002
>Last-Modified:  Fri Apr 05 13:12:13 +0000 2002
>Originator:     matthew green
>Release:        NetBSD 1.5ZC
>Organization:
people's front against (bozotic) www (softwar foundation)
>Environment:
System: NetBSD 1.5ZC (GENERIC) #0: Sun Mar 31 10:51:52 PST 2002 matt@pilot.local:/tmp/vax/obj/sys/arch/vax/compile/GENERIC
Architecture: vax
Machine: vax
>Description:

	while building applications (pkgsrc) for my new :-) vax, i've had a
	repeatable (2x so far) panic:

# extent `ptemap' (0x81fb9000 - 0x88579000), flags = 0x3
     0x81fb9000 - 0x81fb9fff
     0x81fba000 - 0x81fbafff
     0x8203d000 - 0x8203dfff
     0x8203e000 - 0x8203efff
     0x820be000 - 0x8213ffff
     0x82140000 - 0x82140fff
     0x82141000 - 0x82141fff
     0x82142000 - 0x82142fff
     0x82143000 - 0x82143fff
     0x82144000 - 0x82144fff
     0x821c8000 - 0x82248fff
     0x82249000 - 0x822c9fff
     0x822ca000 - 0x8234afff
     0x823cc000 - 0x8244dfff
     0x824ae000 - 0x82533fff
     0x82534000 - 0x825b5fff
     0x82638000 - 0x826bafff
     0x82d50000 - 0x82d50fff
extent_free: start 0x0, end 0xffffffff
panic: extent_free: region not found
Stopped in pid 3 (pagedaemon) at        extent_free+0xe5:       subl3   $1, r8, 1
2(r1)
db> t
panic: extent_free: region not found
Stack traceback :
0x8a958e3c: extent_free+0xe5(0x8019f558,0,0,0x1)
0x8a958e88: rmspace+0x135(0x885fc5c0)
0x8a958ec0: cpu_swapout+0xe(0x80844544)
0x8a958ef4: uvm_swapout+0xf(0x80844544)
0x8a958f14: uvm_swapout_threads+0x6c(void)
0x8a958f34: uvmpd_scan+0x30(void)
0x8a958f68: uvm_pageout+0x97(0x80601380)
db> ps
 PID             PPID       PGRP        UID S   FLAGS          COMMAND    WAIT
 2969            2965        226          0 2  0x4006               ld
 2965            2964        226          0 3  0x4086               cc    wait
 2964            2889        226          0 3    0x86               sh    wait
 2889            2717        226          0 3  0x4086               sh    wait
 2717            2343        226          0 3  0x4086               sh    wait
 2343            2336        226          0 3  0x4086               sh    wait
 2336            2328        226          0 3  0x4082               sh    wait
 2328            2327        226          0 3  0x4082             make    wait
 2327            2150        226          0 3  0x4082               sh    wait
 2150            2149        226          0 3  0x4082             make    wait
 2149            2116        226          0 3  0x4082               sh    wait
 2116            2113        226          0 3  0x4082             make    wait
 2113            2107        226          0 3  0x4082               sh    wait
 2107            2106        226          0 3  0x4082             make    wait
 2106            2069        226          0 3  0x4082               sh    wait
 2069            2068        226          0 3  0x4082             make    wait
 2068            2035        226          0 3  0x4082               sh    wait
 2035            2032        226          0 3  0x4082             make    wait
 2032            2024        226          0 3  0x4082               sh    wait
 2024            2023        226          0 3  0x4082             make    wait
 2023            1958        226          0 3  0x4082               sh    wait
 1958            1957        226          0 3  0x4082             make    wait
 1957            1916        226          0 3  0x4082               sh    wait
 1916            1913        226          0 3  0x4082             make    wait
 1913            1903        226          0 3  0x4082               sh    wait
 1903            1902        226          0 3  0x4082             make    wait
 1902            1787        226          0 3  0x4082               sh    wait
 1787            1786        226          0 3  0x4082             make    wait
 1786            1735        226          0 3  0x4082               sh    wait
 1735             249        226          0 3  0x4082             make    wait
 249              226        226          0 3  0x4082               sh    wait
 226              218        226          0 3  0x4082             make    wait
 218              201        218          0 3  0x4082             tcsh   pause
 201              200        201        127 3  0x4082             tcsh   pause
 200              183        183          0 3   0x184             sshd  select
 199                1        199          0 3  0x4082               sh   ttyin
 197                1        197          0 3    0x84             cron nanosle
 192                1        192          0 3    0x80            inetd  select
 183                1        183          0 3    0x80             sshd  select
 117                0          0          0 3 0x20284            nfsio  nfsidl
 116                0          0          0 3 0x20284            nfsio  nfsidl
 115                0          0          0 3 0x20284            nfsio  nfsidl
 114                0          0          0 3 0x20284            nfsio  nfsidl
 112                1        112          0 3    0x84        mount_mfs  mfsidl
 92                 1         92          0 2    0x80          syslogd
 85                 1         85          0 3    0x80         dhclient  select
 6                  0          0          0 3 0x20204         aiodoned aiodone
 5                  0          0          0 3 0x20204          ioflush  syncer
 4                  0          0          0 3 0x20204           reaper  reaper
>How-To-Repeat:

	make many pkgsrc packages with the recent vaxelf snapshot.

>Fix:

	yes please.
>Release-Note:
>Audit-Trail:

From: Manuel Bouyer <bouyer@antioche.lip6.fr>
To: mrg@eterna.com.au
Cc: gnats-bugs@gnats.netbsd.org, netbsd-bugs@netbsd.org
Subject: Re: kern/16164: recent vax elf snapshot kernel ptemap extent crashes
Date: Tue, 2 Apr 2002 11:23:17 +0200

 On Tue, Apr 02, 2002 at 02:50:31PM +1000, mrg@eterna.com.au wrote:
 > 	while building applications (pkgsrc) for my new :-) vax, i've had a
 > 	repeatable (2x so far) panic:
 > 
 > # extent `ptemap' (0x81fb9000 - 0x88579000), flags = 0x3

 I've seen the same kind of panic on my diskless MVII/3300 running make build
 (still a.out - I'll switch to ELF when this is solved :)
 More details:
 My MVII has completed a make build running a 1.5ZA kernel (build from sources
 supped March 4 or March 5 - I don't remmeber exactly). Once make build
 was complete I upgraded kernel again from sources supped 2 days ago.
 I attempted 3 make build, all 3 failed in different ways:
 - first it got a segmentation fault in the kernel (sorry I don't have the
   exact message, a network problem caused my ssh to time out not long
   after)
 - The second attempt hung at:
 install  -l s -r -o root -g wheel -m 755 usr/src/sys //sys
   with a sh process spending all its time in kernel. A ktrace of the process
   didn't show anything, it was really looping in the kernel without going
   back to userland.
 - Third attempt: the kernel paniced with:
 extent `ptemap' (0x80bf3000 - 0x871b3000), flags = 0x3

 I'm back running the 1.5ZA kernel for now :)

 --
 Manuel Bouyer, LIP6, Universite Paris VI.           Manuel.Bouyer@lip6.fr
 --
State-Changed-From-To: open->feedback 
State-Changed-By: ragge 
State-Changed-When: Tue Apr 2 01:47:56 PST 2002 
State-Changed-Why:  
pmap.c rev. 1.112 should fix this problem. 


Responsible-Changed-From-To: kern-bug-people->ragge 
Responsible-Changed-By: ragge 
Responsible-Changed-When: Tue Apr 2 01:47:56 PST 2002 
Responsible-Changed-Why:  
I'm responsible for this (vax problem). 
State-Changed-From-To: feedback->closed 
State-Changed-By: ragge 
State-Changed-When: Fri Apr 5 05:11:41 PST 2002 
State-Changed-Why:  
The bug is now fixed. 
>Unformatted:
 >3                  0          0          0 7 0x20204       pagedaemon
  2                  0          0          0 3 0x20204           asc0:0  sccomp
  1                  0          1          0 3  0x4084             init    wait
  0                 -1          0          0 2 0x20204          swapper
 db>

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.