Check that each region is inuse before freeing their related extent. This fixes (hopefully) PR#16164.